--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+  
 <head>
-<title>ratsquad网站</title>
+  <title>ratsquad网站</title>
+  link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
