dark/light mode

--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html>
 <head>
   <title>ratsquad</title>
-  <link rel="stylesheet" href="./style.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
   <div class="container">
     <h1></h1>
+
+    <div class="dark-light">
+      <svg viewBox="0 0 24 24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
+       <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z" /></svg>
+     </div>
+
   </div>
   
+  <script src="index.js"></script>
 </body>
 </html>
