--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>ratsquad</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
 
@@ -16,6 +16,6 @@
 
   </div>
   
-  <script src="index.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
