--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>ratsquad</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" type="text/scss" href="style.css">
 </head>
 <body>
 
