--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <title>ratsquad</title>
-  <link href="https://fonts.googleapis.com/css?family=Poppins:700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -16,10 +15,7 @@
     </svg>
   </div>
 
-  <div class="container">
-    <h1>ratsquad</h1>
-
-  </div>
+  <span data-text="ratsquad">ratsquad</span>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="index.js"></script>
